--- a/SEC_AI_Search.ipynb
+++ b/SEC_AI_Search.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# Experiment done by\n",
-    "# Student name Marinto Richee J"
+    "# Y Chethan"
    ]
   },
   {
